# Open3DGen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile_and_run.sh  debug.sh  main.cpp  only_compile.sh
data_files/: bgr_to_rgb.py  debug_camera_mesh.mtl  nonzero_stack_interactive.py  realsense_capture_rgbd.py  realsense_distcoeffs.data  realsense_intrinsic.matrix  realsense_intrinsic_1080.matrix  realsense_intrinsic_1280.matrix  realsense_intrinsic_848.matrix  rename_output_images.py  texture_projection_compute.glsl
libraries/tinyobj/: LICENSE  tiny_obj_loader.h
libraries/xatlas/: xatlas.h
src/: constants.h  feature_graph.h  features.cpp  features.h  gl_debug_callback.cpp  gl_debug_callback.h  image.h  math_modules.cpp  math_modules.h  pointcloud_registration.cpp  pointcloud_registration.h  pose_predictor.cpp  pose_predictor.h  poseg2.cpp  poseg2.h  realsense_capture.cpp  realsense_capture.h  realtime_mesh.cpp  realtime_mesh.h  registration_params.h  rgbd_utilities.cpp  rgbd_utilities.h  s3d_camera.h  shader_stuff.cpp  shader_stuff.h  stitch_reconstruct.h  surface_mesh.cpp  surface_mesh.h  texture_projector.cpp  texture_projector.h  timer.h  utilities.cpp  utilities.h  uv_unwrapper.cpp  uv_unwrapper.h  visualizer.cpp  visualizer.h
